--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="./styles/general.css">
-
+	<script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
 	<title>Grafy</title>
 </head>
-<body>
+<body onload="sendXMLrequest('../sources/z03.xml', main)">    
 	<header>
 		<div class="header-wrapper">
 			<ul class="nav-ul">
@@ -16,5 +16,12 @@
 			</ul>
 		</div>
 	</header>
+	<main>
+		<div id="main-center">
+				<div id='graph-holder'> </div>
+				<div id="xml"></div>
+		</div>
+	</main>
+	<script src="scripts/main.js" type="text/javascript"></script>
 </body>
 </html>
